# ACG-PAs

./: README.md
assignment1/: CMakeLists.txt  README.md  compile.bat
assignment1/src/: mesh.cpp  mesh.h
assignment2/: CMakeLists.txt  README.md
assignment2/1-transformation/: CMakeLists.txt
assignment2/1-transformation/gui/: application.cpp  application.h
assignment2/1-transformation/lib/: transformation.cpp  transformation.h
assignment2/1-transformation/test/: lookat.data  main.cpp  perspective.data  rotation.data  translation.data
assignment2/2-rasterization/: CMakeLists.txt
assignment2/2-rasterization/gui/: CMakeLists.txt  application.cpp  application.h  main.cpp
assignment2/2-rasterization/gui/shader/: output_texture.frag  output_texture.vert
assignment2/2-rasterization/lib/: draw.cpp  draw.h  image.cpp  image.h  pixel.cpp  pixel.h
assignment2/2-rasterization/test/: main.cpp  rectangle.data
assignment2/3-raytracing/: CMakeLists.txt
assignment2/3-raytracing/gui/: main.cpp
assignment2/3-raytracing/lib/: scene.cpp  scene.h  scene_viewer.cpp  scene_viewer.h  triangle.h
assignment2/3-raytracing/lib/shaders/: raytracing_shader.frag  triangle.glsl
assignment3/: README.md  mpm_3d_starter.py
